@@ -5,6 +5,7 @@ import com.zergatul.scripting.binding.BinderOutput;
 import com.zergatul.scripting.compiler.CompilationParameters;
 import com.zergatul.scripting.compiler.CompilationParametersBuilder;
 import com.zergatul.scripting.completion.CompletionProvider;
+import com.zergatul.scripting.completion.CompletionProviderFactory;
 import com.zergatul.scripting.lexer.Lexer;
 import com.zergatul.scripting.lexer.LexerInput;
 import com.zergatul.scripting.parser.Parser;
@@ -19,11 +20,15 @@ public class CompletionTestHelper {
 
     private static final String CURSOR = "<cursor>";
 
+    public static void assertSuggestions_old(Class<?> root, String code, Function<TestCompletionContext, List<Suggestion>> expectedFactory) {
+        assertSuggestions_old(root, code, Runnable.class, expectedFactory);
+    }
+
     public static void assertSuggestions(Class<?> root, String code, Function<TestCompletionContext, List<Suggestion>> expectedFactory) {
         assertSuggestions(root, code, Runnable.class, expectedFactory);
     }
 
-    public static void assertSuggestions(
+    public static void assertSuggestions_old(
             Class<?> root,
             String code,
             Class<?> functionalInterface,
@@ -62,13 +67,52 @@ public class CompletionTestHelper {
         CompletionTestHelper.assertSuggestions(expectedFactory.apply(new TestCompletionContext(parameters, output)), actual);
     }
 
+    public static void assertSuggestions(
+            Class<?> root,
+            String code,
+            Class<?> functionalInterface,
+            Function<TestCompletionContext,
+                    List<Suggestion>> expectedFactory
+    ) {
+        if (!code.contains(CURSOR)) {
+            Assertions.fail();
+            return;
+        }
+
+        int line = -1, column = -1;
+        String[] lines = code.lines().toArray(String[]::new);
+        for (int i = 0; i < lines.length; i++) {
+            int index = lines[i].indexOf(CURSOR);
+            if (index >= 0) {
+                line = i + 1;
+                column = index + 1;
+                break;
+            }
+        }
+        if (line == -1) {
+            Assertions.fail();
+            return;
+        }
+
+        code = code.replace(CURSOR, "");
+
+        CompilationParameters parameters = new CompilationParametersBuilder()
+                .setRoot(root)
+                .setInterface(functionalInterface)
+                .build();
+        BinderOutput output = new Binder(new Parser(new Lexer(new LexerInput(code)).lex()).parse(), parameters).bind();
+        CompletionProviderFactory<Suggestion> factory = new CompletionProviderFactory<>(new TestSuggestionFactory());
+        List<Suggestion> actual = factory.getSuggestions(parameters, output, line, column);
+        CompletionTestHelper.assertSuggestions(expectedFactory.apply(new TestCompletionContext(parameters, output)), actual);
+    }
+
     private static void assertSuggestions(List<Suggestion> expected, List<Suggestion> actual) {
         expected = new ArrayList<>(expected);
         actual = new ArrayList<>(actual);
         while (!expected.isEmpty()) {
             int index = -1;
             for (int i = 0; i < actual.size(); i++) {
-                if (expected.get(0).equals(actual.get(i))) {
+                if (expected.getFirst().equals(actual.get(i))) {
                     index = i;
                     break;
                 }
@@ -76,7 +120,7 @@ public class CompletionTestHelper {
             if (index == -1) {
                 Assertions.fail(String.format("Missing suggestion %s", expected.get(0)));
             }
-            expected.remove(0);
+            expected.removeFirst();
             actual.remove(index);
         }
 
@@ -85,7 +129,7 @@ public class CompletionTestHelper {
         while (!actual.isEmpty()) {
             int index = -1;
             for (int i = 0; i < expected.size(); i++) {
-                if (actual.get(0).equals(expected.get(i))) {
+                if (actual.getFirst().equals(expected.get(i))) {
                     index = i;
                     break;
                 }
@@ -93,7 +137,7 @@ public class CompletionTestHelper {
             if (index == -1) {
                 Assertions.fail(String.format("Redundant suggestion %s", actual.get(0)));
             }
-            actual.remove(0);
+            actual.removeFirst();
             expected.remove(index);
         }
     }
